# goszdrav_spb

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260322_0001_initial.py  20260322_0002_booking_strategy.py
src/goszdrav_bot/: config.py
src/goszdrav_bot/api/: __init__.py  __main__.py  app.py
src/goszdrav_bot/api/routes/: __init__.py  catalog.py  profile.py  watch_targets.py
src/goszdrav_bot/bot/: __init__.py  __main__.py  commands.py
src/goszdrav_bot/bot/handlers/: __init__.py  common.py  profile.py
src/goszdrav_bot/bot/keyboards/: __init__.py  common.py
src/goszdrav_bot/bot/states/: __init__.py  profile.py
src/goszdrav_bot/core/: __init__.py  districts.py  logging.py
src/goszdrav_bot/db/: __init__.py  base.py  models.py  session.py
src/goszdrav_bot/schemas/: __init__.py  catalog.py  profile.py  watch.py
src/goszdrav_bot/scraper/: __init__.py  api_client.py  errors.py  models.py  selenium_client.py  service.py
src/goszdrav_bot/services/: __init__.py  crypto.py  monitoring.py  profile.py  telegram_webapp.py  watch_targets.py
src/goszdrav_bot/webapp/static/: styles.css
src/goszdrav_bot/webapp/templates/: profile.html
src/goszdrav_bot/workers/: __init__.py  __main__.py  monitor.py
tests/: test_api_client_search.py  test_birth_date_parser.py  test_bot_commands.py  test_crypto.py  test_districts.py  test_gorzdrav_maintenance.py  test_monitoring_booking_strategy.py  test_profile_dependencies.py  test_profile_schema.py  test_settings.py  test_webapp_debug_identity.py  test_webapp_settings.py
