[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "goszdrav-bot"
version = "0.1.0"
description = "Telegram bot and mini app scaffold for Goszdrav self-booking automation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram==3.26.0",
  "alembic>=1.16,<2.0",
  "asyncpg>=0.30,<1.0",
  "beautifulsoup4>=4.12,<5.0",
  "cryptography>=45.0,<46.0",
  "email-validator>=2.2,<3.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "jinja2>=3.1,<4.0",
  "pydantic[email]>=2.11,<3.0",
  "pydantic-settings>=2.8,<3.0",
  "python-dotenv>=1.0,<2.0",
  "selenium>=4.32,<5.0",
  "selenium-stealth==1.0.6",
  "sqlalchemy>=2.0.40,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.26,<1.0",
  "ruff>=0.11,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/goszdrav_bot"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
